manifests/catalog-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalog-depl
  labels:
    app: catalog-depl
spec:
  selector:
    matchLabels:
      app: catalog-depl
  replicas: 1
  template:
    metadata:
      labels:
        app: catalog-depl
    spec:
      containers:
      - name: catalog-depl
        image: hafsa22/microsvc:catalog-latest
        imagePullPolicy: Always
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 5000
