manifests/play-song-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: play-song-depl
  labels:
    app: play-song-depl
spec:
  selector:
    matchLabels:
      app: play-song-depl
  template:
    metadata:
      labels:
        app: play-song-depl
    spec:
      containers:
      - name: play-song-depl
        image: hafsa22/microsvc:play-song-latest
        imagePullPolicy: Always
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 5000
