manifests/reg-login-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reg-login-depl
  labels:
    app: reg-login-depl
spec:
  selector:
    matchLabels:
      app: reg-login-depl
  replicas: 1
  template:
    metadata:
      labels:
        app: reg-login-depl
    spec:
      containers:
      - name: reg-login-depl
        image: hafsa22/microsvc:reg-login-latest
        imagePullPolicy: Always
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 5000
