manifests/upload-song-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: upload-song-depl
  labels:
    app: upload-song-depl
spec:
  selector:
    matchLabels:
      app: upload-song-depl
  template:
    metadata:
      labels:
        app: upload-song-depl
    spec:
      volumes:
        - name: songs-storage
          persistentVolumeClaim:
            claimName: songs-pvc
      containers:
      - name: upload-song-depl
        image: hafsa22/microsvc:upload-song-latest
        imagePullPolicy: Always
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 5000
        volumeMounts:
        - mountPath: /usr/share/nginx/html/songs
          name: songs-storage
