manifests/catalog-db-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: catalog-db
spec:
  selector:
    app: catalog-db-depl
  ports:
  - port: 6379
    targetPort: 6379
