manifests/catalog-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: catalog-svc
spec:
  selector:
    app: catalog-depl
  ports:
  - port: 5000
    targetPort: 5000
