manifests/db-lb-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: redis-lb-svc
spec:
  type: LoadBalancer
  selector:
    app: catalog-db-depl
  ports:
  - port: 6379
    targetPort: 6379
