manifests/list-search-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: list-search-svc
spec:
  selector:
    app: list-search-depl
  ports:
  - port: 5000
    targetPort: 5000
