manifests/play-song-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: play-song-svc
spec:
  selector:
    app: play-song-depl
  ports:
  - port: 5000
    targetPort: 5000
