manifests/reg-login-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: reg-login-svc
  labels:
    app: reg-login-svc
spec:
  selector:
    app: reg-login-depl
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
