manifests/songs-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: songs-svc
spec:
  selector:
    app: songs-depl
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
