manifests/userdb-lb-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: user-lb-svc
spec:
  type: LoadBalancer
  selector:
    app: users-db-depl
  ports:
  - port: 6379
    targetPort: 6379
