manifests/users-db-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: users-db
spec:
  selector:
    app: users-db-depl
  ports:
  - protocol: TCP
    port: 6379
    targetPort: 6379
