manifests/ingress-gateway.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  labels:
    name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 100M
spec:
  rules:
  - host: localhost
    http:
      paths:
      - pathType: Prefix
        path: /get-catalog
        backend:
          service:
            name: list-search-svc
            port: 
              number: 5000
      - pathType: Prefix
        path: /upload-song
        backend:
          service:
            name: upload-song-svc
            port:
              number: 5000
      - pathType: Prefix
        path: /play-song
        backend:
          service:
            name: play-song-svc
            port: 
              number: 5000
      - pathType: Prefix
        path: /songs
        backend:
          service:
            name: songs-svc 
            port: 
              number: 80
      - pathType: Prefix
        path: /register
        backend:
          service:
            name: reg-login-svc
            port: 
              number: 5000
      - pathType: Prefix
        path: /login 
        backend:
          service:
            name: reg-login-svc
            port: 
              number: 5000
      - pathType: Prefix
        path: /logout
        backend:
          service:
            name: reg-login-svc
            port: 
              number: 5000
