manifests/play-rewrite-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: play-rewrite-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /play-song
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /get-song
        pathType: Exact
        backend:
          service:
            name: play-song-svc
            port: 
              number: 5000
